[package]
name = "davidhoeppner"
version = "0.1.0"
authors = ["David Hoeppner <email@davidhoeppner.ca>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { version = "0.5", features = ["fullstack", "router"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]

[package.metadata.scripts]
serve = "dx clean && dx serve --platform fullstack"
# build_release = "dx build --features web --release"
# ssr = "cargo run-script build && cargo run --features ssr --release"
# ssr_hot_reload = "cargo run-script build && dx serve --features ssr --hot-reload --platform desktop"
